from typing import Protocol
from uuid import UUID

from .entities import User


class IUserRepository(Protocol):
    async def get_by_id(self, entity_id: UUID) -> User: ...
    async def get_by_email(self, email: str) -> User | None: ...
    async def has_admin(self) -> bool: ...
    async def save(self, entity: User) -> None: ...
    async def delete(self, entity: User) -> None: ...
